# uclatools

./: .gitignore  CMakeLists.txt  License  Makefile  README
ImgLib/: CMakeLists.txt  ImgLib.c  ImgLib.h  ImgLibError.c  ImgLibError.h  MathLib.c  MathLib.h  Target.h  VLib.c  analyzeUtil.c  analyzeUtil.h  getopt.h
ShowAnaHdr/: CMakeLists.txt  ShowAnaHdr.c
analysis/: Analyze2Genesis.c  CC_gr.c  CC_gr.h  CMakeLists.txt  EditAnalyzeHeader.c  GEFunc2Analyze.c  Generic2bshort.c  Genesis2Analyze.c  Mathalyze.c  Outlier.c  P2P.c  ReOrderImages.c  SignaRenum.c  SwapBFloat.c  SynthSeries.c  T2Map.c  dcm2img.c  equalize.c  gen2bshort.c  mult2stack.c  variance.c
colorize/: CMakeLists.txt  overlayMac.c
convolve/: CMakeLists.txt  Cproto.c
imageConversion/: Ana3to4d.c  CMakeLists.txt  imconvert.c  makefile.orig
src/: global.mk
src/ImgLib/: Makefile  VLib.c  VLib.h  getopt.c
src/analysis/: Averager.c  CC_gr.c  GEFunc2Analyze.c  ImageInfo.c  Makefile  SignaRenum.c  TimeVolumeSwap.c  equalize.c  mult2stack.c  npix.c
src/colorize/: Makefile
src/imageConversion/: Makefile
xds/: CMakeLists.txt  Makefile  NOTES.formatting  TODO.repack  TODO.xds  apd2tobshort  assert_print.h  complex.h  dashes.txt  ds_date.h  ds_head_acr_groups_types.h  ds_head_basic_types.h  ds_head_constants.h  ds_head_image_text_type.h  ds_head_shadow_groups_types.h  ds_head_type.h  ds_include_files.h  errmain.h  error.h  examine_im.c  grinder.c  image.h  mosaic  mosaic.c  num2.h  para2.c  pd.h  psimage.c  read_acr.c  read_apd2.c  read_im.c  read_im.h  read_image.c  read_image.h  read_otl.c  read_otl.h  repack  repack.c  repack_help.h  scale_ovl.c  (+11 more)
