PROJECT(UCLATOOLS)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
###### OS Bit
SET(CMAKE_CXX_FLAGS "-O3 -ftree-vectorize") 
SET(CMAKE_C_FLAGS "-O3 -ftree-vectorize") 
SET(CMAKE_OSX_ARCHITECTURES "i386;ppc;ppc64;x86_64") 
SET(CMAKE_INSTALL_PREFIX ${UCLATOOLS_SOURCE_DIR}/installed)
IF(${CMAKE_BUILD_TYPE} STREQUAL Debug)
  SET(CMAKE_VERBOSE_MAKEFILE ON)
ENDIF(${CMAKE_BUILD_TYPE} STREQUAL Debug)

ADD_SUBDIRECTORY(ImgLib)
ADD_SUBDIRECTORY(analysis)
ADD_SUBDIRECTORY(colorize)
ADD_SUBDIRECTORY(imageConversion)
ADD_SUBDIRECTORY(ShowAnaHdr)
