PROJECT(UCLATOOLS)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
###### OS Bit
SET(CMAKE_CXX_FLAGS "-O3 -ftree-vectorize") 
SET(CMAKE_C_FLAGS "-O3 -ftree-vectorize") 
IF(UNIVERSAL)
  SET(CMAKE_OSX_ARCHITECTURES "i386;ppc;ppc64;x86_64") 
ENDIF(UNIVERSAL)

SET(CMAKE_EXE_LINKER_FLAGS "-lm")
IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE "Release" CACHE STRING
       "Choose the type of build, options are: Debug Release 
RelWithDebInfo MinSizeRel."
       FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX "${UCLATOOLS_SOURCE_DIR}" CACHE PATH 
    "Choose the install prefix. Default: ${UCLATOOLS_SOURCE_DIR}"
    FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

IF("${CMAKE_BUILD_TYPE}" STREQUAL Debug)
  SET(CMAKE_VERBOSE_MAKEFILE ON)
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL Debug)

ADD_SUBDIRECTORY(ImgLib)
ADD_SUBDIRECTORY(analysis)
ADD_SUBDIRECTORY(colorize)
ADD_SUBDIRECTORY(imageConversion)
ADD_SUBDIRECTORY(ShowAnaHdr)
ADD_SUBDIRECTORY(convolve)
ADD_SUBDIRECTORY(xds)
