FIND_PACKAGE(X11 REQUIRED)
SET(CMAKE_CXX_FLAGS "-DNEED_GETOPT_H -funroll-loops -fomit-frame-pointer -ffast-math ${CMAKE_CXX_FLAGS}" )
SET(CMAKE_C_FLAGS "-DNEED_GETOPT_H -funroll-loops -fomit-frame-pointer -ffast-math ${CMAKE_C_FLAGS}" )
IF(APPLE)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fshared-data -DBSD")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fshared-data -DBSD")
ENDIF(APPLE)
ADD_LIBRARY(read_image STATIC read_image.c)
ADD_LIBRARY(read_im STATIC read_im.c)
ADD_LIBRARY(read_otl STATIC read_otl.c)
ADD_LIBRARY(read_acr STATIC read_acr.c)
ADD_LIBRARY(read_apd2 STATIC read_apd2.c)
ADD_LIBRARY(symtab STATIC symtab.c)

SET(LIBS read_im read_acr read_apd2 symtab read_image read_otl ${X11_LIBRARIES})
INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
ADD_EXECUTABLE(xds xds.c)
TARGET_LINK_LIBRARIES(xds ${LIBS})
INSTALL(TARGETS xds RUNTIME DESTINATION bin)
